src/Components/pages/Header/site-header.module.css
/*---------------------------------------
  HEADER PAGE              
-----------------------------------------*/

.headerContainer {
    display: flex;
    background-color: var(--heading-color);
    flex-direction: row;
    justify-content: space-between;
    flex: 0 0 max(45px);
}

.logoContainer {
    align-self: center;
    margin-left: 1em;
}

.logo {
    padding-top: 0.2em;
    height: 40px;
    cursor: pointer;
}

.headerMobileDropdown {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 1em;
}

.headerMobileDropdown:hover .dropdownMenu {
    display: block;
}

.headerButtons {
    display: none;
}

.buttonLogin {
    color: #ccdde2ff;
    font-size: 1em;
    font-weight: 500;
    cursor: pointer;
    transition: 0.4s;
    margin-bottom: 0em;
    width: fit-content;
    margin-top: 0em;
    padding: 0.1em 0.8em 0px 0.8em;
    height: 1.8em;
    border: 1px solid #ccdde2ff;
    border-radius: 0.6em;
}
.headerDropdownIcon {
    color: #ccdde2ff;
    width: 25px;
    height: auto;
    aspect-ratio: 1/1;
}
.buttonLogin:hover {
    color: var(--primary-hover-color);
    border-color: transparent;
    border: 1px solid var(--primary-hover-color);
    border-top-left-radius: 0.6em;
    border-bottom-left-radius: 0.6em;
}

.buttonRegister {
    background: var(--primary-color);
    color: white;
    font-size: 1em;
    padding: 0.1em 0.8em;
    border: 1px solid transparent;
    font-weight: 500;
    cursor: pointer;
    transition: 0.2s;
    height: 1.8em;
    width: fit-content;
    border-radius: 0.6em;
    border-bottom-left-radius: 0em;
    border-top-left-radius: 0em;
}

.buttonRegister:hover {
    background: var(--primary-hover-color);
    color: var(--white-color);
}
.headerDropdownContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 1em;
}

/* NOTIFICATIONS */

.profileImage {
    border-radius: var(--border-radius-small);
    width: 2em;
    height: 2em;
    object-fit: cover;
}

.dropdownMenu.notificationsBlockWrap {
    min-width: 465px;
}

.notificationsBlockWrap small {
    background: var(--custom-btn-bg-color);
    display: block;
    padding: 15px 30px;
    margin-top: -15px;
    margin-bottom: 10px;
}

.notificationsBlock p {
    font-size: var(--btn-font-size);
    margin-bottom: 0;
}

.notificationsBlock span {
    white-space: normal;
}

.dropdown .notificationsBlock .dropdownItem:hover {
    background: transparent;
    color: var(--dark-color);
}

.notificationsIconWrap {
    background: var(--section-bg-color);
    border-radius: var(--border-radius-medium);
    width: 32px;
    min-width: 32px;
    height: 32px;
    line-height: 32px;
    text-align: center;
    margin-right: 10px;
}

.notificationsIcon {
    font-size: var(--p-font-size);
    color: var(--white-color);
}

/* DROPDOWN MENU  */
/* Styles for the header dropdown container */
.headerDropdownContainer {
    position: relative;
    display: flex;
}

.dropdownMenuProfileThumb {
    display: flex;
    justify-content: start;
    gap: 1em;
    align-items: center;
    padding-left: 1em;
    padding-bottom: 0.5em;
    border-bottom: 1px solid var(--border-color);
}
/* Styles for the dropdown notifications */
.dropdownNotifications {
    position: relative;
    display: inline-block;
}
.notificationsIcon {
    width: 20px;
    height: auto;
    aspect-ratio: 1/1;
}
.notificationDot {
    position: absolute;
    top: 0;
    right: 0;
    background-color: red;
    width: 10px;
    height: 10px;
    border-radius: 50%;
}
.hidden {
    display: none;
}

/* Styles for the dropdown toggle */
.dropdownToggle {
    position: relative;
    display: inline-block;
    cursor: pointer;
}

/* Styles for the dropdown menu */
.dropdownMenu {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    border-radius: 4px;
    padding: 1em;
    min-width: 200px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 3;
    top: 45px;
    left: -150px; /* Adjust the left position as needed */
}

/* Show the dropdown menu on hover */
.dropdownNotifications:hover .dropdownMenu {
    display: block;
}

/* Style the dropdown links */
.dropdownItem {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Add a grey background color to dropdown links on hover */
.dropdownItem:hover {
    background-color: #f1f1f1;
}

@media (min-width: 800px) {
    .headerMobileDropdown {
        display: none;
    }

    .headerButtons {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        margin-right: 1em;
    }

    /* Styles for the dropdown menu */
    .dropdownMenu {
        display: none;
        position: absolute;
        background-color: #f9f9f9;
        border-radius: 4px;
        padding: 1em;
        min-width: 300px;
        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
        z-index: 3;
        top: 40px;
        left: -250px; /* Adjust the left position as needed */
    }
}

